<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_investigation_instructions2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="0dp"
    tools:context="com.example.investigation_deduction.investigator_instructions">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/investigator_Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/investigation_instruction_text2"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/activity_between_text_margin"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/investigator_Headline2" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:text="@string/investigation_instruction_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textAppearance="@style/MainText"
                    android:layout_margin="@dimen/activity_between_text_margin" />

                <TextView
                    android:text="@string/investigation_instruction_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView4"
                    android:id="@+id/textView5"
                    android:textAppearance="@style/MainText"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:textAlignment="textStart" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/investigation_instruction_text_clueEx"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textAppearance="@style/MainText"
                    android:textSize="16sp" />

                <TextView
                    android:text="@string/investigation_instruction_text5"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView6"
                    android:id="@+id/textView9"
                    android:textAppearance="@style/MainText"
                    android:textSize="14sp" />

                <TextView
                    android:text="@string/investigation_instruction_text_clueEx2"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView9"
                    android:id="@+id/textView8"
                    android:textAppearance="@style/MainText"
                    android:textSize="16sp" />

                <TextView
                    android:text="@string/investigation_instruction_text6"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView8"
                    android:id="@+id/textView12"
                    android:textAppearance="@style/MainText"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:text="@string/investigator_instruction_text7"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textAppearance="@style/MainText"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/progress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/investigation_instruction2_progress"
            android:textAppearance="@style/MainText" />

    </RelativeLayout>

</RelativeLayout>
