<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="0dp"
    tools:context="com.example.investigation_deduction.investigator_instructions">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/investigation_instruction_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/investigator_Instructions"
            android:layout_marginBottom="@dimen/activity_beforeafter_text_margin"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"/>

        <TextView
            android:text="@string/investigation_instruction_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_below="@+id/investigator_Instructions"
            android:layout_marginBottom="@dimen/activity_beforeafter_text_margin"
            android:textAppearance="@style/MainText"
            android:textAlignment="center"
            />

        <Button
            android:text="@string/investigation_instruction_clue"
            android:layout_width="@dimen/activity_instruction_width"
            android:layout_height="wrap_content"
            android:id="@+id/instruction_button_left"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/activity_instruction_button_margin"
            android:layout_marginStart="@dimen/activity_instruction_button_margin"
            android:layout_marginBottom="@dimen/activity_between_text_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_colors"
            android:textColor="@color/colorButtonText" />

        <Button
            android:text="@string/investigation_instruction_guess"
            android:layout_width="@dimen/activity_instruction_width"
            android:layout_height="wrap_content"
            android:id="@+id/instruction_button_right"
            android:layout_below="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_instruction_button_margin"
            android:layout_marginEnd="@dimen/activity_instruction_button_margin"
            android:layout_marginBottom="@dimen/activity_between_text_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/button_colors"
            android:textColor="@color/colorButtonText" />

        <TextView
            android:layout_width="@dimen/activity_instruction_width"
            android:layout_height="wrap_content"
            android:id="@+id/instructions_clue_text"
            android:layout_below="@+id/instruction_button_left"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/activity_instruction_button_margin"
            android:layout_marginStart="@dimen/activity_instruction_button_margin"
            android:text="@string/investigation_instruction_clue_text"
            android:textAppearance="@style/MainText"
            android:textAlignment="center" />

        <TextView
            android:text="@string/investigation_instruction_guess_text"
            android:layout_width="@dimen/activity_instruction_width"
            android:layout_height="wrap_content"
            android:id="@+id/instructions_guess_text"
            android:layout_below="@+id/instruction_button_right"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_instruction_button_margin"
            android:layout_marginEnd="@dimen/activity_instruction_button_margin"
            android:textAppearance="@style/MainText"
            android:textAlignment="center" />

        <TextView
            android:text="@string/investigation_instruction1_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress1"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textAppearance="@style/MainText" />

        <TextView
            android:text="@string/investigator_instruction_Swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/progress1"
            android:id="@+id/SwipeText"
            android:textAppearance="@style/MainText" />


    </RelativeLayout>
</RelativeLayout>
