<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.investigation_deduction.investigator_MainActivity">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/main_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/investigation_main_headline"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_beforeafter_text_margin"
            android:id="@+id/headline" />

        <TextView
            android:text="@string/investigation_main_text_rest1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headline"
            android:id="@+id/intro_text2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:layout_marginTop="@dimen/activity_main_textMargintopbot"
            android:layout_marginBottom="@dimen/activity_main_textMargintopbot"
            android:layout_marginRight="@dimen/activity_main_textMarginSide"
            android:layout_marginEnd="@dimen/activity_main_textMarginSide"
            android:layout_marginLeft="@dimen/activity_main_textMarginSide"
            android:layout_marginStart="@dimen/activity_main_textMarginSide"/>

        <Button
            android:text="@string/investigation_instruction_button"
            android:layout_width="@dimen/activity_clueCardWidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/intro_text2"
            android:layout_centerInParent="true"
            android:id="@+id/main_instructions_button"
            android:textSize="20sp"
            style="@style/MainButtons"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:text="@string/investigation_play_button"
            android:layout_width="@dimen/activity_main_play"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_instructions_button"
            android:layout_centerInParent="true"
            android:id="@+id/main_play_button"
            android:textSize="24sp"
            style="@style/MainButtons"
            android:padding="@dimen/activity_beforeafter_text_margin"
            android:layout_marginTop="@dimen/activity_beforeafter_text_margin" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_hideContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkBackground"
        android:visibility="gone"
        android:clickable="true">

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/main_menu"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_main_paddingMenu"
        android:background="@drawable/main_menuback"
        android:contentDescription="hidden"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/main_menu_resetStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Reset stats"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true" />

        <TextView
            android:id="@+id/main_menu_stats"
            android:text="@string/investigator_main_menu_stats"
            android:padding="@dimen/activity_main_paddingMenu"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_between_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MenuText"
            android:clickable="true"
            />

        <TableLayout
            android:id="@+id/main_menu_statsContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_stats">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin" >

                <TextView
                    android:text="@string/investigator_main_menu_stat1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/stats_highScore"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/activity_stats_tableMargin"
                    android:layout_marginStart="@dimen/activity_stats_tableMargin" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin" >

                <TextView
                    android:text="@string/investigator_main_menu_stat2"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/stats_numberOfPlayed"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/activity_stats_tableMargin"
                    android:layout_marginStart="@dimen/activity_stats_tableMargin"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin">

                <TextView
                    android:text="@string/investigator_main_menu_stat3"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/stats_numberOfWins"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/activity_stats_tableMargin"
                    android:layout_marginStart="@dimen/activity_stats_tableMargin" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin" >

                <TextView
                    android:text="@string/investigator_main_menu_stat4"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/stats_losses"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/activity_stats_tableMargin"
                    android:layout_marginStart="@dimen/activity_stats_tableMargin" />


            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/main_menu_credits"
            android:text="@string/investigator_main_menu_credits"
            android:padding="@dimen/activity_main_paddingMenu"
            android:layout_marginTop="@dimen/activity_main_paddingMenu"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_below="@+id/main_menu_statsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/MenuText"
            android:clickable="true"
            />

        <TableLayout
            android:id="@+id/main_menu_creditsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_menu_credits">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/investigator_main_menu_creditsDev"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_between_text_margin"
                    android:layout_marginStart="@dimen/activity_between_text_margin"
                    android:text="@string/investigator_main_menu_creditsDevN"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/investigator_main_menu_creditsUi"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_between_text_margin"
                    android:layout_marginStart="@dimen/activity_between_text_margin"
                    android:text="@string/investigator_main_menu_creditsUiN"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_between_text_margin" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/investigator_main_menu_creditsGraph"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_between_text_margin"
                    android:layout_marginStart="@dimen/activity_between_text_margin"
                    android:text="@string/investigator_main_menu_creditsGraphN"
                    android:textColor="@android:color/white"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</RelativeLayout>
