<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_investigation_instructions2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="0dp"
    tools:context="com.example.investigation_deduction.investigator_instructions">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:text="@string/investigation_instruction3_headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:id="@+id/textView3"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:text="@string/investigation_instruction3_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_below="@+id/textView3"
                    android:id="@+id/textView7"
                    android:textAppearance="@style/MainText" />

                <TextView
                    android:text="@string/investigation_instruction3_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_below="@+id/textView7"
                    android:id="@+id/textView8"
                    android:textAppearance="@style/MainText" />

                <TextView
                    android:text="@string/investigation_instruction3_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_between_text_margin"
                    android:layout_below="@+id/textView8"
                    android:id="@+id/textView9"
                    android:textAppearance="@style/MainText" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/star_big_on"
                    android:id="@+id/imageView"
                    android:layout_margin="@dimen/activity_between_text_margin"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:text="@string/investigation_instruction3_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress3"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</RelativeLayout>
